[package]
name = "gpt-pipe"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "GPT use with UNIX pipes"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tokio-openai = "1.0.1"
