[package]
name = "gpt-pipe"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "GPT use with UNIX pipes"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
repository = "https://github.com/andrewgazelka/gpt-pipe"
readme = "README.md"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["derive"] }
ctrlc = "3.2.5"
futures = "0.3.28"
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-openai = "1.0.1"
tokio-util = "0.7.7"
